--- a/app/components/carousel/style.css
+++ b/app/components/carousel/style.css
@@ -1,13 +1,5 @@
-/********************************************
-	BREAKPOINT WIDTHS
-********************************************/
-/********************************************
-	FONTS
-********************************************/
-/********************************************
-	COLOURS
-********************************************/
-.carousel .control-arrow, .carousel.carousel-slider .control-arrow {
+:global(.carousel .control-arrow),
+:global(.carousel.carousel-slider .control-arrow) {
   transition: all 0.25s ease-in;
   opacity: 0.4;
   filter: alpha(opacity=40);
@@ -17,60 +9,93 @@
   background: none;
   border: 0;
   font-size: 32px;
-  cursor: pointer; }
-.carousel .control-arrow:hover {
+  cursor: pointer;
+}
+
+:global(.carousel .control-arrow:hover) {
   opacity: 1;
-  filter: alpha(opacity=100); }
-.carousel .control-arrow:before, .carousel.carousel-slider .control-arrow:before {
+  filter: alpha(opacity=100);
+}
+
+:global(.carousel .control-arrow:before),
+:global(.carousel.carousel-slider .control-arrow:before) {
   margin: 0 5px;
   display: inline-block;
   border-top: 8px solid transparent;
   border-bottom: 8px solid transparent;
-  content: ''; }
-.carousel .control-disabled.control-arrow {
+  content: '';
+}
+
+:global(.carousel .control-disabled.control-arrow) {
   opacity: 0;
   filter: alpha(opacity=0);
   cursor: inherit;
-  display: none; }
-.carousel .control-prev.control-arrow {
-  left: 0; }
-.carousel .control-prev.control-arrow:before {
-  border-right: 8px solid #fff; }
-.carousel .control-next.control-arrow {
-  right: 0; }
-.carousel .control-next.control-arrow:before {
-  border-left: 8px solid #fff; }
-.carousel {
+  display: none;
+}
+
+:global(.carousel .control-prev.control-arrow) {
+  left: 0;
+}
+
+:global(.carousel .control-prev.control-arrow:before) {
+  border-right: 8px solid #fff;
+}
+
+:global(.carousel .control-next.control-arrow) {
+  right: 0;
+}
+
+:global(.carousel .control-next.control-arrow:before) {
+  border-left: 8px solid #fff;
+}
+
+:global(.carousel) {
   position: relative;
-  width: 100%; }
-.carousel * {
+  width: 100%;
+}
+
+:global(.carousel *) {
   margin: 0;
   padding: 0;
-  box-sizing: border-box; }
-.carousel button {
+  box-sizing: border-box;
+}
+
+:global(.carousel button) {
   outline: 0;
   border: 0;
-  background: none; }
-.carousel img {
+  background: none;
+}
+
+:global(.carousel img) {
   width: 100%;
   display: inline-block;
-  pointer-events: none; }
-.carousel .carousel {
-  position: relative; }
-.carousel .control-arrow {
+  pointer-events: none;
+}
+
+:global(.carousel .carousel) {
+  position: relative;
+}
+
+:global(.carousel .control-arrow) {
   top: 50%;
   margin-top: -13px;
-  font-size: 18px; }
-.carousel .thumbs-wrapper {
+  font-size: 18px;
+}
+
+:global(.carousel .thumbs-wrapper) {
   margin: 20px;
-  overflow: hidden; }
-.carousel .thumbs {
+  overflow: hidden;
+}
+
+:global(.carousel .thumbs) {
   transition: all 0.15s ease-in;
   transform: translate3d(0, 0, 0);
   position: relative;
   list-style: none;
-  white-space: nowrap; }
-.carousel .thumb {
+  white-space: nowrap;
+}
+
+:global(.carousel .thumb) {
   transition: border 0.15s ease-in;
   display: inline-block;
   width: 80px;
@@ -78,62 +103,94 @@
   white-space: nowrap;
   overflow: hidden;
   border: 3px solid #fff;
-  padding: 2px; }
-.carousel .thumb.selected, .carousel .thumb:hover {
+  padding: 2px;
+}
+
+:global(.carousel .thumb.selected),
+:global(.carousel .thumb:hover) {
   border: 3px solid #333;
-  padding: 2px; }
-.carousel .thumb img {
-  vertical-align: top; }
-.carousel.carousel-slider {
+  padding: 2px;
+}
+
+:global(.carousel .thumb img) {
+  vertical-align: top;
+}
+
+:global(.carousel.carousel-slider) {
   position: relative;
   margin: 0;
-  overflow: hidden; }
-.carousel.carousel-slider .control-arrow {
+  overflow: hidden;
+}
+
+:global(.carousel.carousel-slider .control-arrow) {
   top: 0;
   color: #fff;
   font-size: 26px;
   bottom: 0;
   margin-top: 0;
-  padding: 5px; }
-.carousel.carousel-slider .control-arrow:hover {
-  background: rgba(0, 0, 0, 0.2); }
-.carousel .slider-wrapper {
+  padding: 5px;
+}
+
+:global(.carousel.carousel-slider .control-arrow:hover) {
+  background: rgba(0, 0, 0, 0.2);
+}
+
+:global(.carousel .slider-wrapper) {
   overflow: hidden;
   margin: auto;
   width: 100%;
-  transition: height 0.15s ease-in; }
-.carousel .slider-wrapper.axis-horizontal .slider {
-  display: flex; }
-.carousel .slider-wrapper.axis-horizontal .slider .slide {
+  transition: height 0.15s ease-in;
+}
+
+:global(.carousel .slider-wrapper.axis-horizontal .slider) {
+  display: flex;
+}
+
+:global(.carousel .slider-wrapper.axis-horizontal .slider .slide) {
   flex-direction: column;
-  flex-flow: column; }
-.carousel .slider-wrapper.axis-vertical {
-  display: flex; }
-.carousel .slider-wrapper.axis-vertical .slider {
+  flex-flow: column;
+}
+
+:global(.carousel .slider-wrapper.axis-vertical) {
+  display: flex;
+}
+
+:global(.carousel .slider-wrapper.axis-vertical .slider) {
   -webkit-flex-direction: column;
-  flex-direction: column; }
-.carousel .slider {
+  flex-direction: column;
+}
+
+:global(.carousel .slider) {
   position: relative;
   list-style: none;
-  width: 100%; }
-.carousel .slider.animated {
-  transition: all 0.35s ease-in-out; }
-.carousel .slide {
+  width: 100%;
+}
+
+:global(.carousel .slider.animated) {
+  transition: all 0.35s ease-in-out;
+}
+
+:global(.carousel .slide) {
   min-width: 100%;
   margin: 0;
   position: relative;
   text-align: center;
 }
-.carousel .slide img {
+
+:global(.carousel .slide img) {
   width: 100%;
   vertical-align: top;
-  border: 0; }
-.carousel .slide iframe {
+  border: 0;
+}
+
+:global(.carousel .slide iframe) {
   display: inline-block;
   width: calc(100% - 80px);
   margin: 0 40px 40px;
-  border: 0; }
-.carousel .slide .legend {
+  border: 0;
+}
+
+:global(.carousel .slide .legend) {
   position: absolute;
   bottom: 40px;
   left: 50%;
@@ -146,17 +203,24 @@
   font-size: 12px;
   text-align: center;
   opacity: 0.25;
-  transition: opacity 0.35s ease-in-out; }
-.carousel .control-dots {
+  transition: opacity 0.35s ease-in-out;
+}
+
+:global(.carousel .control-dots) {
   position: absolute;
   bottom: 0;
   margin: 10px 0;
   text-align: center;
-  width: 100%; }
+  width: 100%;
+}
+
 @media (min-width: 960px) {
-  .carousel .control-dots {
-    bottom: 0; } }
-.carousel .control-dots .dot {
+  :global(.carousel .control-dots) {
+    bottom: 0;
+  }
+}
+
+:global(.carousel .control-dots .dot) {
   cursor: pointer;
   transition: opacity 0.25s ease-in;
   opacity: 0.3;
@@ -167,17 +231,25 @@
   width: 8px;
   height: 8px;
   display: inline-block;
-  margin: 0 8px; }
-.carousel .control-dots .dot.selected, .carousel .control-dots .dot:hover {
+  margin: 0 8px;
+}
+
+:global(.carousel .control-dots .dot.selected),
+:global(.carousel .control-dots .dot:hover) {
   opacity: 1;
-  filter: alpha(opacity=100); }
-.carousel .carousel-status {
+  filter: alpha(opacity=100);
+}
+
+:global(.carousel .carousel-status) {
   position: absolute;
   top: 0;
   right: 0;
   padding: 5px;
   font-size: 10px;
   text-shadow: 1px 1px 1px rgba(0, 0, 0, 0.9);
-  color: #fff; }
-.carousel:hover .slide .legend {
-  opacity: 1; }
+  color: #fff;
+}
+
+:global(.carousel:hover .slide .legend) {
+  opacity: 1;
+}
