--- a/app/components/calculator/style.css
+++ b/app/components/calculator/style.css
@@ -1,6 +1,7 @@
 .box {
   display: flex;
   flex-direction: column;
+  align-items: center;
   flex-grow: 1;
   width: 100%;
 }
@@ -78,6 +79,8 @@
   display: flex;
   align-items: center;
   justify-content: center;
+  width: 100%;
+  max-width: 300px;
   margin: 20px;
   padding: 5px;
   border-radius: 3px;
